# captchaserver

./: .gitignore  README.md  sign.ps1  trust_cert.ps1
agent/: CMakeLists.txt
agent/assets/config/: agent.conf.example
agent/include/agent/: config.h  types.h
agent/src/: main.cpp
agent/src/core/: protocol.cpp  protocol.h  ws_client.cpp  ws_client.h
agent/src/platform/: win_utils.cpp  win_utils.h
agent/src/resources/: app.manifest  version.rc
agent/src/systems/: anti_debug.cpp  anti_debug.h  persistence.cpp  persistence.h  service_manager.cpp  service_manager.h  watchdog.cpp  watchdog.h
agent/src/ui/: captcha_popup.cpp  captcha_popup.h
agent/src/utils/: base64.cpp  base64.h  logger.cpp  logger.h
server/: go.mod  go.sum
server/cmd/server/: main.go
server/internal/alert/: notifier.go
server/internal/captcha/: generator.go
server/internal/db/: sqlite.go
server/internal/model/: types.go
server/internal/telegram/: bot.go
server/internal/web/: handlers.go
server/internal/ws/: hub.go
server/static/css/: style.css  win10ui.css
server/static/js/: app.js  win10ui.js
server/templates/: agent_detail.html  agents.html  dashboard.html  history.html  layout.html  settings.html
